--- a/organization.html
+++ b/organization.html
@@ -1,76 +1,72 @@
----
-layout: default
----
+--- layout: default ---
 <h2>Organizing Committee</h2>
 <dl class="accordion" data-accordion>
-	
-		<dd>
-		<a href="#board2"><span class="name">Irina Rychkov</span>, Centre de Recherche en Informatique (CRI), University Paris 1 Panthéon-Sorbonne, France</a>
-		<div id="board2" class="content">
-			<div class="row">
-				<div class="large-4 medium-4 columns">
-					<!-- <img src="img/betty.png" width="100%" /> -->
-				</div>
-				<div class="large-8 medium-8 columns">
-					TBD
 
-				</div>
-			</div>
-		</div>
-	</dd>
-	
-	
-	<dd>
-		
-		<a href="#board1"><span class="name">Nicolas Herbaut</span>,  Centre de Recherche en Informatique (CRI), University Paris 1 Panthéon-Sorbonne, France
+    <dd>
+        <a href="#board2"><span class="name">Irina Rychkov</span>, Centre de Recherche en Informatique (CRI), University Paris 1 Panthéon-Sorbonne, France</a>
+        <div id="board2" class="content">
+            <div class="row">
+                <div class="large-4 medium-4 columns">
+                    <!-- <img src="img/betty.png" width="100%" /> -->
+                </div>
+                <div class="large-8 medium-8 columns">
+                    TBD
+
+                </div>
+            </div>
+        </div>
+    </dd>
+
+
+    <dd>
+
+        <a href="#board1"><span class="name">Nicolas Herbaut</span>,  Centre de Recherche en Informatique (CRI), University Paris 1 Panthéon-Sorbonne, France
 		</a>
-		<div id="board1" class="content">
-			<div class="row">
-				<div class="large-4 medium-4 columns">
-					<!-- <img src="img/nicolas.jpg" width="100%" /> -->
-				</div>
-				<div class="large-8 medium-8 columns">
-					Nicolas Herbaut is an associate professor at Université Paris 1 Panthéon Sorbonne. His research interests are in the domain of Network Softwarization, Blockchain and Software Engineering. Before earning his PhD from Bordeaux University in 2017, he worked for 10 years in the software industry in startups and large groups. He participated in several European and National collaborative research projects, and coordinated the creation of the IEEE Blockchain Initiative local group in France. He publishes in venues such as IEEE Globecom, ICC, Communication Magazine and Multimedia Magazine.
-				</div>
-			</div>
-		</div>
-	</dd>
+        <div id="board1" class="content">
+            <div class="row">
+                <div class="large-4 medium-4 columns">
+                    <!-- <img src="img/nicolas.jpg" width="100%" /> -->
+                </div>
+                <div class="large-8 medium-8 columns">
+                    Nicolas Herbaut is an associate professor at Université Paris 1 Panthéon Sorbonne. His research interests are in the domain of Network Softwarization, Blockchain and Software Engineering. Before earning his PhD from Bordeaux University in 2017, he worked
+                    for 10 years in the software industry in startups and large groups. He participated in several European and National collaborative research projects, and coordinated the creation of the IEEE Blockchain Initiative local group in France.
+                    He publishes in venues such as IEEE Globecom, ICC, Communication Magazine and Multimedia Magazine.
+                </div>
+            </div>
+        </div>
+    </dd>
 
-	<dd>
-		<a href="#board2"><span class="name">Blagovesta Kostova</span>, EPFL, Switzerland</a>
-		<div id="board2" class="content">
-			<div class="row">
-				<div class="large-4 medium-4 columns">
-					<!-- <img src="img/betty.png" width="100%" /> -->
-				</div>
-				<div class="large-8 medium-8 columns">
-					Blagovesta Kostova is a fourth-year PhD student at EPFL under the supervision of Professor Alain Wegmann. Her main research topic is privacy engineering of service-oriented systems. In her research, she works on the conceptualization, design, and implementation of methods and tools for modeling the intersection between enterprise and IT systems. Blagovesta interned at Microsoft Research and AI, working on software engineering tools for using homomorphic encryption without expert knowledge. Before her doctoral studies, she had 5 years of industry experience in developing CRM and ERP systems, as well as in an EPFL startup focused on searchable encryption and multiparty computation.
+    <dd>
+        <a href="#board3"><span class="name">Blagovesta Kostova</span>, EPFL, Switzerland</a>
+        <div id="board3" class="content">
+            <div class="row">
+                <div class="large-4 medium-4 columns">
+                    <!-- <img src="img/betty.png" width="100%" /> -->
+                </div>
+                <div class="large-8 medium-8 columns">
+                    Blagovesta Kostova is a fourth-year PhD student at EPFL under the supervision of Professor Alain Wegmann. Her main research topic is privacy engineering of service-oriented systems. In her research, she works on the conceptualization, design, and implementation
+                    of methods and tools for modeling the intersection between enterprise and IT systems. Blagovesta interned at Microsoft Research and AI, working on software engineering tools for using homomorphic encryption without expert knowledge.
+                    Before her doctoral studies, she had 5 years of industry experience in developing CRM and ERP systems, as well as in an EPFL startup focused on searchable encryption and multiparty computation.
 
-				</div>
-			</div>
-		</div>
-	</dd>
-	
+                </div>
+            </div>
+        </div>
+    </dd>
+
 </dl>
 
 <h2>Program Committee</h2>
 
 <dl class="accordion-like-list" data-accordion>
-<dd><span class="name">Nicolas Herbaut</span>, University Paris 1, France </dd>
-<dd><span class="name">Blagovesta Kostova</span>, EPFL, Switzerland </dd>
-<dd><span class="name">Irina Rychkova</span>, University Paris 1, France </dd>
-<dd><span class="name">Gil Regev</span>, EPFL, Switzerland </dd>
-<dd><span class="name">Alain Wegmann</span>, EPFL, Switzerland </dd>
-<dd><span class="name">Saïd Assar</span>, Institut Mines-Télécom Business School, France </dd>
-<dd><span class="name">Marwan Hassani</span>, Eindhoven University of Technology, the Netherlands </dd>
-<dd><span class="name">Fabiano Dalpiaz</span>, Utrecht University, the Netherlands </dd>
-<dd><span class="name">Christos Kalloniatis</span>, University of Aegean, Greece </dd>
-<dd><span class="name">Dominik Huth</span>, Technische Universität München, Germany </dd>
-<dd><span class="name">Jelena Zdravkovic</span>, TDSV, University of  Stockholm, Sweden </dd>	
-<dd><span class="name">Kim Wuyts</span>, Katholieke Universiteit, Leuven, Belgium </dd>
-	
-
-		
-		
-
-
+    <dd><span class="name">Nicolas Herbaut</span>, University Paris 1, France </dd>
+    <dd><span class="name">Blagovesta Kostova</span>, EPFL, Switzerland </dd>
+    <dd><span class="name">Irina Rychkova</span>, University Paris 1, France </dd>
+    <dd><span class="name">Gil Regev</span>, EPFL, Switzerland </dd>
+    <dd><span class="name">Alain Wegmann</span>, EPFL, Switzerland </dd>
+    <dd><span class="name">Saïd Assar</span>, Institut Mines-Télécom Business School, France </dd>
+    <dd><span class="name">Marwan Hassani</span>, Eindhoven University of Technology, the Netherlands </dd>
+    <dd><span class="name">Fabiano Dalpiaz</span>, Utrecht University, the Netherlands </dd>
+    <dd><span class="name">Christos Kalloniatis</span>, University of Aegean, Greece </dd>
+    <dd><span class="name">Dominik Huth</span>, Technische Universität München, Germany </dd>
+    <dd><span class="name">Jelena Zdravkovic</span>, TDSV, University of Stockholm, Sweden </dd>
+    <dd><span class="name">Kim Wuyts</span>, Katholieke Universiteit, Leuven, Belgium </dd>
