--- a/paper.html
+++ b/paper.html
@@ -1,91 +1,108 @@
----
-layout: default
----
+--- layout: default ---
 <h1 class="print-only">Second International Workshop on Privacy and Security in Enterprise Modeling (PriSEM'21)</h1>
 <p class="print-only"> in conjonction with IEEE EDOC 2021</p>
 <h2>Call for papers</h2>
- <p class="no-print">Download the PDF version of CFP <a href="resources/cfp.pdf"  target="_blank">here</a>.</p>
- <p class="print-only"> Visit PriSEM21  website https://prisem-ws.github.io </p>	
+<p class="no-print">Download the PDF version of CFP <a href="resources/cfp.pdf" target="_blank">here</a>.</p>
+<p class="print-only"> Visit PriSEM21 website https://prisem-ws.github.io </p>
 
 <p>
-Security and privacy are critical issues in modern organizations. Enterprise business processes and their supporting systems have to constantly evolve in order to comply with security and privacy policies. Complex organizational structures and their distributed business processes make such compliance a major effort. Moreover, the intersection between privacy and security technologies and software engineering has tremendous implications on the very way information systems are modeled for their design and development. These changes affect the requirements and software engineering processes in organizations. That is why security and privacy requirements have to be explicitly addressed in enterprise models while technologies supporting security and privacy have to become an integrated part of Enterprise Architecture.
+    Security and privacy are critical issues in modern organizations. Enterprise business processes and their supporting systems have to constantly evolve in order to comply with security and privacy policies. Complex organizational structures and their distributed
+    business processes make such compliance a major effort. Moreover, the intersection between privacy and security technologies and software engineering has tremendous implications on the very way information systems are modeled for their design and
+    development. These changes affect the requirements and software engineering processes in organizations. That is why security and privacy requirements have to be explicitly addressed in enterprise models while technologies supporting security and privacy
+    have to become an integrated part of Enterprise Architecture.
 </p>
 <p>
-Emerging technologies such as distributed ledgers, privacy-enhancing technologies, and blockchains leverage powerful cryptography features, all-purpose Turing-complete programming languages and flexible communication models. They are considered as new transparency security and privacy enablers for distributed processing without requiring a trusted third-party. Today, their integration within information systems is a difficult task for enterprise architects due to the paradigm-shifting nature of those technologies and the lack of adequate models and tools from the enterprise modeling community. This paradigmatic shift can also be explained with privacy-enhancing technologies coming from a tradition of privacy as confidentiality. This area is under explored and yet to be understood.
+    Emerging technologies such as distributed ledgers, privacy-enhancing technologies, and blockchains leverage powerful cryptography features, all-purpose Turing-complete programming languages and flexible communication models. They are considered as new
+    transparency security and privacy enablers for distributed processing without requiring a trusted third-party. Today, their integration within information systems is a difficult task for enterprise architects due to the paradigm-shifting nature of
+    those technologies and the lack of adequate models and tools from the enterprise modeling community. This paradigmatic shift can also be explained with privacy-enhancing technologies coming from a tradition of privacy as confidentiality. This area
+    is under explored and yet to be understood.
 </p>
 <p>
-The goal of PriSEM’20 is to bring together researchers and practitioners to discuss theoretical and practical problems and solutions in a rapidly maturing domain of enterprise security and privacy. The integration of security and privacy aspects in enterprise models is a central theme of this workshop.
-</p> 
+    The goal of PriSEM’21 is to bring together researchers and practitioners to discuss theoretical and practical problems and solutions in a rapidly maturing domain of enterprise security and privacy. The integration of security and privacy aspects in enterprise
+    models is a central theme of this workshop.
+</p>
 <h4>Topics</h4>
 <p>
-We strongly encourage the submissions reporting a synergy of innovative research and best practices in the area of organizational privacy and security management, modeling and architecture, etc.  
+    We strongly encourage the submissions reporting a synergy of innovative research and best practices in the area of organizational privacy and security management, modeling and architecture, etc.
 </p>
 <p>The topics of interest include but are not limited to</p>
 <ul>
-<li>Modeling for design and analysis of privacy-enhanced and/or security enterprise systems</li>
-	<li>Privacy/security by design</li>
-	<li>Privacy/security modeling for software design</li>
-	<li>Modeling for privacy/security compliance </li>
-	<li>Privacy beyond compliance/privacy as confidentiality in enterprises</li>
-	<li>Data protection mechanisms and implementation in enterprises</li>
-	<li>Conceptualization and modeling of privacy-enhancing technologies (PETs) in requirements engineering, enterprise modeling, and IS </li>
-	<li>Modeling for privacy-preserving ML and AI</li>
-	<li>Privacy/security management using emerging technologies </li>
-	<li>Privacy/security modeling for enterprise distributed ledger and blockchain solutions</li>
-	<li>Privacy/security modeling for enterprise smart contracts</li>
-	<li>Privacy/security modeling for enterprise IoT integration</li>
-	<li>Privacy/security modeling for supply-chain</li>
-	<li>Practical aspects of privacy & security modeling in the organizations</li>
-	<li>Privacy/security in business process modeling</li>
-	<li>Usability of privacy and security in the context of enterprise architecture</li>
-	<li>Privacy/security enterprise methods and methodologies</li>
+    <li>Modeling for design and analysis of privacy-enhanced and/or security enterprise systems</li>
+    <li>Privacy/security by design</li>
+    <li>Privacy/security modeling for software design</li>
+    <li>Modeling for privacy/security compliance </li>
+    <li>Privacy beyond compliance/privacy as confidentiality in enterprises</li>
+    <li>Data protection mechanisms and implementation in enterprises</li>
+    <li>Conceptualization and modeling of privacy-enhancing technologies (PETs) in requirements engineering, enterprise modeling, and IS </li>
+    <li>Modeling for privacy-preserving ML and AI</li>
+    <li>Privacy/security management using emerging technologies </li>
+    <li>Privacy/security modeling for enterprise distributed ledger technologies and blockchain solutions</li>
+    <li>Privacy/security modeling for enterprise smart contracts</li>
+    <li>Privacy/security modeling for enterprise IoT integration</li>
+    <li>Privacy/security modeling for supply-chain</li>
+    <li>Practical aspects of privacy & security modeling in the organizations</li>
+    <li>Privacy/security in business process modeling</li>
+    <li>Usability of privacy and security in the context of enterprise architecture</li>
+    <li>Privacy/security enterprise methods and methodologies</li>
 </ul>
 
 <h4>Paper Types</h4>
 <p>We solicit four types of contributions:</p>
 <ul>
-	<li><span class="b">Technical papers</span> should describe original results not been accepted or submitted for publication elsewhere. These papers will be evaluated based on their scientific and technical contribution, originality, and relevance.</li>
-	<li><span class="b">Experience reports</span> should provide new insights gained in case studies or when applying enterprise computing technology in practice; industry experience reports shall further provide important feedback about the state of practice and pose challenges for researchers. These papers will be evaluated based on their appropriateness, significance, and clarity. Industry experience reports must report an actual implementation in practice and must have at least one author with an industry affiliation.
-	<li><span class="b">Successful failures and negative results papers</span> should report experiences of an attempt to combine privacy and/or security in enterprise modeling with a less favorable outcome than expected. These papers should present an analysis of the situation about intentions vs reality and reflections in the format of lessons learnt and guidelines about what could be done to avoid repeating such cases.</li>
-	<li><span class="b">Position papers</span> should give a broad yet well-informed overview of the topic they focus on and build a vision and a research roadmap, or open questions for the community at any topic related to privacy, security, and enterprise modeling. These papers should show familiarity with related work and could be built on extensive literateure review but should offer the reflections of the authors about the research domain and not merely summarize prior research. These papers will be evaluated on their potential to spark debate during the workshop as well as how artitulate they highlight current and future challenges.	</li>
+    <li><span class="b">Technical papers</span> should describe original results not been accepted or submitted for publication elsewhere. These papers will be evaluated based on their scientific and technical contribution, originality, and relevance.</li>
+    <li><span class="b">Experience reports</span> should provide new insights gained in case studies or when applying enterprise computing technology in practice; industry experience reports shall further provide important feedback about the state of practice
+        and pose challenges for researchers. These papers will be evaluated based on their appropriateness, significance, and clarity. Industry experience reports must report an actual implementation in practice and must have at least one author with
+        an industry affiliation.
+        <li><span class="b">Successful failures and negative results papers</span> should report experiences of an attempt to combine privacy and/or security in enterprise modeling with a less favorable outcome than expected. These papers should present an
+            analysis of the situation about intentions vs reality and reflections in the format of lessons learnt and guidelines about what could be done to avoid repeating such cases.</li>
+        <li><span class="b">Position papers</span> should give a broad yet well-informed overview of the topic they focus on and build a vision and a research roadmap, or open questions for the community at any topic related to privacy, security, and enterprise
+            modeling. These papers should show familiarity with related work and could be built on extensive literateure review but should offer the reflections of the authors about the research domain and not merely summarize prior research. These papers
+            will be evaluated on their potential to spark debate during the workshop as well as how artitulate they highlight current and future challenges. </li>
 </ul>
 
 <br>
 
 <h2>Formatting and Submission Guidelines</h2>
 <p>
-	
-<p>We welcome full and short papers. Full-paper submissions should be 8-10 pages. Short-paper submissions should be 4-6 pages. All submissions must be made in PDF format and comply with the <a href="https://www.ieee.org/conferences/publishing/templates.html">IEEE Computer Society Conference Proceedings Format Guidelines.</a>
-</p>
-	
-<h2>Proceedings</h2>
 
-<p>Accepted papers will be published in an IEEE companion proceedings for all workshops.</p>
+    <p>We welcome full and short papers. Full-paper submissions should be 8-10 pages. Short-paper submissions should be 4-6 pages. All submissions must be made in PDF format and comply with the <a href="https://www.ieee.org/conferences/publishing/templates.html">IEEE Computer Society Conference Proceedings Format Guidelines.</a>
+    </p>
+
+    <h2>Proceedings</h2>
+
+    <p>Accepted papers will be published in an IEEE companion proceedings for all workshops.</p>
 
 
 
-<h2>Key Dates</h2>
-<table>
-	<tr>
-		<td>
-Workshop paper submission</td><td> 18 June 2021</td>
-</tr>
-<tr><td>
-Workshop papers acceptance notification</td> <td>16 July 2021</td>
-</tr>
-<tr>
-	<td>
-Workshop camera-ready papers due</td> <td>30 July 2021</td>
-</tr>
-<tr><td>
-Author registration</td> <td> 30 July 2021</td>
-</tr>
-<tr>
-	<td>
-Workshops sessions</td> <td>25 October 2021</td>
-</tr>
-</table>
+    <h2>Key Dates</h2>
+    <table>
+        <tr>
+            <td>
+                Workshop paper submission</td>
+            <td> 18 June 2021</td>
+        </tr>
+        <tr>
+            <td>
+                Workshop papers acceptance notification</td>
+            <td>16 July 2021</td>
+        </tr>
+        <tr>
+            <td>
+                Workshop camera-ready papers due</td>
+            <td>30 July 2021</td>
+        </tr>
+        <tr>
+            <td>
+                Author registration</td>
+            <td> 30 July 2021</td>
+        </tr>
+        <tr>
+            <td>
+                Workshops sessions</td>
+            <td>25 October 2021</td>
+        </tr>
+    </table>
 
-<h2>Submit Here</h2>
-<p class="print-only">Checkout our website know more about PriSEM: 	https://prisem-ws.github.io</p>
-<p>Submit via <a href="https://easychair.org/conferences/?conf=prisem21" target="_blank">EasyChair</a></p>
+    <h2>Submit Here</h2>
+    <p class="print-only">Checkout our website know more about PriSEM: https://prisem-ws.github.io</p>
+    <p>Submit via <a href="https://easychair.org/conferences/?conf=prisem21" target="_blank">EasyChair</a></p>
