fixed issue with typesetting

--- a/paper.html
+++ b/paper.html
@@ -1,4 +1,7 @@
---- layout: default ---
+--- 
+layout: default 
+---
+
 <h1 class="print-only">Second International Workshop on Privacy and Security in Enterprise Modeling (PriSEM'21)</h1>
 <p class="print-only"> in conjonction with IEEE EDOC 2021</p>
 <h2>Call for papers</h2>
