--- a/organization.html
+++ b/organization.html
@@ -13,8 +13,7 @@ layout: default
                     <!-- <img src="img/betty.png" width="100%" /> -->
                 </div>
                 <div class="large-8 medium-8 columns">
-                    TBD
-
+Irina Rychkova is an associate professor at Université Paris 1 Panthéon Sorbonne and a researcher at Centre de Recherche en Informatique since September 2009. Her research interests include strategic alignment, enterprise and business process modeling. Irina holds a PhD in System modeling and Enterprise Architecture from Suisse Federal Institute of Technology at Lausanne (EPFL), and MSc in Applied Mathematics and Physics from Moscow Institute of Physics and Technology, in Russia. Prior to joining CRI - Paris 1, Irina was a research assistant at EPFL, Laboratory of Systemic Modeling (LAMS).
                 </div>
             </div>
         </div>
