--- a/index.html
+++ b/index.html
@@ -39,3 +39,12 @@ We strongly encourage the submissions reporting a synergy of innovative research
 	<li>Privacy/security enterprise methods and methodologies</li>
 
 </ul>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RKD447GLQR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RKD447GLQR');
+</script>
