--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
 <h3>News</h3>
 <ul>
 	<li>Mar 22, 2021: A first version of the website is online!</li>
+	<li>Jun 21, 2021: Submission deadline has been extended to August 16th</li>
 	</li>
 </ul>
 
